# f18

./: .clang-format  .gitignore  CMakeLists.txt  LAPACK-bugs.txt  README.md
documentation/: ArrayExpressionLoweringToFIR.md  FIR.md  FIRLangRef.md
include/: CMakeLists.txt
include/fir/: Attribute.h  CMakeLists.txt  FIRDialect.h  FIROps.h  FIROps.td  FIROpsSupport.h  FIRType.h  InternalNames.h  KindMapping.h  MemToReg.h  Type.h
include/optimizer/: Attribute.h  FIRDialect.h  FIROps.td  FIROpsSupport.h  FIRType.h  InternalNames.h  KindMapping.h
lib/: CMakeLists.txt
lib/Decimal/: CMakeLists.txt  binary-to-decimal.cpp
lib/Evaluate/: CMakeLists.txt
lib/Lower/: Bridge.cpp  CFGBuilder.h  CMakeLists.txt  ConvertExpr.cpp  ConvertType.cpp  FIRBuilder.cpp  IO.cpp  Intrinsics.cpp  Mangler.cpp  OpBuilder.cpp  PFTBuilder.cpp  RTBuilder.h  Runtime.cpp
lib/Optimizer/: CMakeLists.txt  CodeGen.cpp  StdConverter.cpp
lib/Optimizer/Dialect/: FIRAttr.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp
lib/Optimizer/Support/: InternalNames.cpp  KindMapping.cpp
lib/Optimizer/Transforms/: CSE.cpp  MemToReg.cpp  RewriteLoop.cpp
lib/Parser/: CMakeLists.txt
lib/Semantics/: CMakeLists.txt  check-do-forall.cpp  tools.cpp
lib/burnside/: CMakeLists.txt  ast-builder.cc  ast-builder.h  bridge.cc  bridge.h  builder.cc  builder.h  canonicalize.cc  canonicalize.h  cfg-builder.h  common.h  complex-handler.h  complex.h  convert-expr.cc  convert-expr.h  convert-type.cc  convert-type.h  expression.cc  expression.h  fe-helper.cc  flattened.cc  flattened.h  intrinsics.cc  intrinsics.h  io.cc  io.h  mangler.cc  mangler.h  mixin.h  runtime.cc  runtime.h
lib/decimal/: binary-to-decimal.cc  binary-to-decimal.cpp  decimal-to-binary.cc  decimal-to-binary.cpp
lib/fir/: Attribute.cpp  CMakeLists.txt  Dialect.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp  InternalNames.cpp  KindMapping.cpp  LLVMConverter.cpp  MemToReg.cpp  StdConverter.cpp  Tilikum.cpp  Type.cpp
lib/fir/Dialect/: FIRAttr.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp
lib/fir/Transforms/: CMakeLists.txt  CSE.cpp  MemToReg.cpp  RewriteLoop.cpp
lib/lower/: ASTBuilder.cpp  Bridge.cpp  CFGBuilder.h  CMakeLists.txt  ConvertExpr.cpp  ConvertType.cpp  IO.cpp  Intrinsics.cpp  Mangler.cpp  NSAliases.h  OpBuilder.cpp  PFTBuilder.cpp  RTBuilder.h  Runtime.cpp  ast-builder.cc  ast-builder.h  bridge.cc  bridge.h  builder.cc  builder.h  cfg-builder.h  complex-handler.h  convert-expr.cc  convert-expr.h  convert-type.cc  convert-type.h  intrinsics.cc  intrinsics.h  io.cc  io.h  mangler.cc  mangler.h  mixin.h  runtime.cc  runtime.def  runtime.h
lib/mlbridge/: CMakeLists.txt  bridge.cc  bridge.h  builder.cc  builder.h  canonicalize.cc  canonicalize.h  common.h  expr-lowering.cc  expr-lowering.h  expression.cc  expression.h  fe-helper.cc  fe-helper.h  fir-conversion.cc  fir-conversion.h  fir-dialect.cc  fir-dialect.h  fir-type.cc  fir-type.h  flattened.cc  flattened.h  mem2reg.cc  mem2reg.h  runtime.cc  runtime.def  runtime.h  viaduct.cc  viaduct.h
lib/optimizer/: Attribute.cpp  CMakeLists.txt  CodeGen.cpp  FIRType.cpp  InternalNames.cpp  KindMapping.cpp  StdConverter.cpp
lib/optimizer/Dialect/: FIRAttr.cpp  FIRDialect.cpp  FIROps.cpp  FIRType.cpp
lib/optimizer/Support/: CMakeLists.txt  InternalNames.cpp  KindMapping.cpp
lib/optimizer/Transforms/: CMakeLists.txt  CSE.cpp  MemToReg.cpp  RewriteLoop.cpp
lib/parser/: basic-parsers.h  parse-state.h  parsing.h  prescan.h  user-state.h
lib/semantics/: resolve-names-utils.cc  resolve-names.cpp  semantics.h
not-test/lower/: test_character_assignment.sh
runtime/: CMakeLists.txt  format.h  io-api.h  io-stmt.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test-lit/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test-lit/Fir/: fir-ops.fir  loop10.fir
test-lit/fir/: embox-write.fir  fir-ops.fir  global.fir  loop.fir
test-lit/lower/: intrinsic-operations.f90  pre-fir-tree02.f90  pre-fir-tree03.f90  pre-fir-tree04.f90
test/Decimal/: CMakeLists.txt
test/Evaluate/: CMakeLists.txt
test/Examples/: hello.f90  main.c
test/Fir/: global.fir
test/Lower/: array-init-driver.c  array-init.f90  character-assignment.f90  end-to-end-character-assignment.f90  open.f90  pre-fir-tree02.f90  (+1 more)
tools/: CMakeLists.txt
tools/bbc/: CMakeLists.txt  bbc.cc  bbc.cpp
tools/tco/: CMakeLists.txt  tco.cpp
unittests/Runtime/: CMakeLists.txt
(+72 files in other folders)
